# Midori

./: CMakeLists.txt  Midori.cpp  Midori.h  README.md
MidoriPrelude/: DateTime.mdr  IO.mdr  Math.mdr
MidoriUtil/: MidoriUtil.mdr
src/: Midori.cpp
src/Common/ByteCode/: ByteCode.h
src/Common/BytecodeStream/: BytecodeStream.h
src/Common/Constant/: Constant.h
src/Common/Error/: Error.cpp  Error.h
src/Common/Executable/: Executable.cpp  Executable.h
src/Common/ExecutableModule/: ExecutableModule.h
src/Common/Printer/: Printer.h
src/Common/Result/: Result.h
src/Common/Type/: Type.cpp  Type.h
src/Common/Value/: GlobalVariableTable.h  Object.h  StaticData.h  Type.h  Value.cpp  Value.h
src/Compiler/: Compiler.cpp  Compiler.h
src/Compiler/AbstractSyntaxTree/: AbstractSyntaxTree.cpp  AbstractSyntaxTree.h  Expression.h  Statement.h
src/Compiler/CodeGenerator/: CodeGenerator.cpp  CodeGenerator.h
src/Compiler/Error/: Error.h
src/Compiler/Lexer/: Lexer.cpp  Lexer.h
src/Compiler/Parser/: Parser.cpp  Parser.h
src/Compiler/StaticAnalyzer/: ReturnAnalyzer.cpp  StaticAnalyzer.h
src/Compiler/StaticAnalyzer/TypeChecker/: TypeChecker.cpp  TypeChecker.h
src/Compiler/Token/: Token.cpp  Token.h
src/Compiler/TypeChecker/: TypeChecker.cpp  TypeChecker.h
src/Interpreter/GarbageCollector/: GarbageCollector.cpp  GarbageCollector.h
src/Interpreter/NativeFunction/: NativeFunction.cpp  NativeFunction.h
src/Interpreter/VirtualMachine/: VirtualMachine.cpp  VirtualMachine.h
src/Utility/AbstractSyntaxTreePrinter/: AbstractSyntaxTreePrinter.cpp  AbstractSyntaxTreePrinter.h
src/Utility/Disassembler/: Disassembler.cpp  Disassembler.h
test/: test.mdr  test1.mdr  test2.mdr  test3.mdr  test4.mdr
test/closure/: closure_inside_conditional.mdr  dynamic_creation.mdr  dynamic_creation_capture_ref.mdr  dynamic_creation_capture_value.mdr  man_or_boy.mdr  multiple_nested.mdr  multiple_variable.mdr  mutable.mdr  nested.mdr  nested_and_recursion.mdr  recursion.mdr  recursive_closure.mdr  side_effect.mdr  simple.mdr
test/leetcode/: 338_counting_bits.mdr  371_sum_of_two_integers.mdr  50_pow(x, n).mdr
test/namespace/: simple.mdr  struct.mdr  union.mdr
test/performance/: all.mdr  fib35.mdr  generate_paren.mdr  prime100000.mdr  str_concat.mdr
test/sicp/: differentiation.mdr  exponential.mdr  higher_order_function.mdr  lexical_scoping.mdr  recursion_iteration.mdr  simple_data_abstraction.mdr
test/static_analyzer/: s.mdr
test/struct/: duck_typing.mdr  func_member.mdr  nested_struct.mdr
test/type/: simple_generic.mdr
test/union/: nested_case.mdr  simple.mdr  use_unpacked_values.mdr  valid_switch.mdr  valid_switch_default.mdr
